<resources>
    <string name="app_name">Trailr</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="trailer_url">Trailer URL</string>
    <string name="thumbnail_url">Thumbnail URL</string>
    <string name="new_film">Add a new film</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_watch_trailer">WatchTrailerActivity</string>
    <string name="sure_want_delete">Are you sure you want to delete this film?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
